--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -8,12 +8,11 @@
     font-size: 36px;
 }
 
-.third {
+.font-size {
     font-size: 24px;
 }
 
 #fourth {
     background-color: #85FD86;
-    font-size: 24px;
     font-weight: bold;
 }
